# mergeguard

./: .editorconfig  .gitignore  .mergeguard.yml.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mlflow_pr21273_report.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dogfood.yml  release.yml
action/: Dockerfile  action.yml  entrypoint.sh
benchmarks/: BENCHMARKS.md  capture.py  file_client.py  run_benchmarks.py
checklists/: phase1-week01.md  phase1-week02.md  phase1-week03.md  phase1-week04.md  phase1-week05.md  phase1-week06.md  phase2-week07.md  phase2-week08.md  phase2-week09.md  phase2-week10.md  phase2-week11.md  phase2-week12.md  phase3-week13.md  phase3-week14.md  phase3-week15.md  phase3-week16.md  phase3-week17.md  phase3-week18.md  phase3-week19.md  phase3-week20.md  v05-01-inline-annotations.md  v05-02-webhook-server.md  v05-03-codeowners-routing.md  v05-04-merge-queue.md  v05-05-stacked-prs.md  v05-06-blast-radius.md  v05-07-policy-engine.md  v05-08-dora-metrics.md  v05-09-secret-scanning.md  v05-10-self-hosted.md  v05-11-ai-resolution.md  v05-12-ide-integration.md  v05-13-service-mesh.md
docs/: architecture.md  ci-setup.md  code-audit.md  code-review-findings.md  configuration.md  contributing.md  enterprise-readiness-assessment.md  faq.md  getting-started.md  how-it-works.md  release-checklist.md  testing-strategy.md
docs/superpowers/plans/: 2026-04-04-critical-high-fixes.md  2026-04-05-v1-phases-1-2-3-5.md  2026-04-08-transitive-accuracy-fix.md  2026-04-08-v1-final-phases.md  2026-04-12-v1.0.1-track1-cleanup.md
docs/superpowers/specs/: 2026-04-04-v1-release-design.md
examples/basic-github-action/.github/workflows/: mergeguard.yml
examples/github-actions/: mergeguard.yml
examples/gitlab-ci/: .gitlab-ci.yml
examples/monorepo-config/: .mergeguard.yml
examples/reports/: django_pr20826.json  langchain_pr35457.json
src/mergeguard/: __init__.py  cli.py  config.py  constants.py  models.py
src/mergeguard/analysis/: __init__.py  ast_parser.py  attribution.py  codeowners.py  dependency.py  diff_parser.py  similarity.py  stacked_prs.py  symbol_index.py
src/mergeguard/core/: __init__.py  conflict.py  engine.py  fix_templates.py  guardrails.py  merge_order.py  metrics.py  policy.py  regression.py  risk_scorer.py  secret_patterns.py  secrets.py
src/mergeguard/integrations/: __init__.py  bitbucket_client.py  git_local.py  github_client.py  gitlab_client.py  llm_analyzer.py  protocol.py  rate_limit.py
src/mergeguard/mcp/: __init__.py  server.py
src/mergeguard/output/: __init__.py  _sanitize.py  badge.py  blast_radius.py  constants.py  dashboard_html.py  github_comment.py  html_report.py  inline_annotations.py  json_report.py  metrics_html.py  notifications.py  sarif.py  terminal.py
src/mergeguard/server/: __init__.py  events.py  metrics.py  queue.py  webhook.py
src/mergeguard/storage/: __init__.py  cache.py  decisions_log.py  metrics_store.py
tests/: conftest.py
tests/fixtures/api_responses/: open_prs.json  pr_files.json
tests/fixtures/diffs/: simple_modification.diff
tests/integration/: test_cli.py  test_engine_e2e.py  test_engine_integration.py  test_github_client.py  test_gitlab_integration.py  test_webhook_server.py
tests/unit/: test_ast_parser.py  test_attribution.py  test_badge.py  test_bitbucket_client.py  test_blast_radius.py  test_cli_autodetect.py  test_codeowners.py  test_codeowners_integration.py  test_commit_status.py  test_concurrency.py  test_config.py  test_conflict.py  test_decisions_log.py  test_dependency.py  test_diff_parser.py  test_dora_metrics.py  test_edge_cases.py  test_engine.py  test_error_recovery.py  test_file_client.py  test_fix_templates.py  test_git_local.py  test_github_comment.py  test_gitlab_client.py  test_inline_annotations.py  test_llm_analyzer.py  test_map_json.py  test_merge_queue.py  test_metrics_cli.py  test_metrics_store.py  test_notifications.py  test_output_sanitization.py  test_output_smoke.py  test_patch_backfill.py  test_policy.py  test_protocol.py  test_queue.py  test_queue_circuit_breaker.py  test_rate_limit.py  test_regression.py  (+8 more)
(+1 files in other folders)
