[project]
name = "py-mergeguard"
version = "1.0.1"
description = "Cross-PR intelligence for the agentic coding era"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Vansh Bajaj", email = "vansh2795@gmail.com" }]
maintainers = [{ name = "Vansh Bajaj", email = "vansh2795@gmail.com" }]
keywords = ["code-review", "pull-request", "ai-code", "git", "developer-tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tree-sitter-language-pack>=0.13.0",
    "pygithub>=2.5.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.42.0", "openai>=1.0.0"]
llm-anthropic = ["anthropic>=0.42.0"]
llm-openai = ["openai>=1.0.0"]
mcp = ["mcp>=1.0.0"]
server = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]
all = ["py-mergeguard[llm]", "py-mergeguard[mcp]", "py-mergeguard[server]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "respx>=0.22",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/Vansh2795/mergeguard"
Repository = "https://github.com/Vansh2795/mergeguard.git"
Issues = "https://github.com/Vansh2795/mergeguard/issues"
Changelog = "https://github.com/Vansh2795/mergeguard/blob/main/CHANGELOG.md"

[project.scripts]
mergeguard = "mergeguard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mergeguard"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "respx>=0.22",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "openai.*", "anthropic.*", "yaml.*", "fastapi.*", "uvicorn.*", "starlette.*",
    "rich.*", "tree_sitter.*", "tree_sitter_language_pack.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mergeguard.server.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["mergeguard"]
omit = ["*/server/webhook.py", "*/mcp/server.py"]

[tool.coverage.report]
fail_under = 65
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
